# NetworksLab2017

./: README.md
report/: report.md
report/res/: tcp_netem_linux.pcapng  tcp_netem_windows.pcapng  udp_duplicate_windows.pcapng  udp_netem_linux.pcapng  udp_netem_linux2.pcapng  udp_netem_windows.pcapng  udp_netem_windows2.pcapng
src/: CMakeLists.txt  main.c
src/client/: efunc.c  efunc.h  main.c  termproto.c  termproto.h  test.c
src/config/: config.c  config.h
src/lib/: efunc.c  efunc.h  termproto.c  termproto.h
src/logger/: logger.c  logger.h
src/server/: main.c  server.c  server.h
src/server/handler/: handler.c  handler.h
src/server/handler/peer/: peer.c  peer.h
src/server/peer/: peer.c  peer.h
src/server/service/: service.c  service.h
src/server/terminal/: terminal.c  terminal.h
tcp/: CMakeLists.txt
tcp/client/: main.c
tcp/lib/: efunc.c  efunc.h  termproto.c  termproto.h
tcp/logger/: logger.c
tcp/server/: server.h
tcp/server/handler/: handler.c
tcp/server/handler/peer/: peer.c
tcp/server/service/: service.c
tcp_template/client_linux/: main.c
tcp_template/client_win/: CMakeLists.txt  Makefile  main.c
tcp_template/server_linux/: main.c
tcp_template/server_win/: CMakeLists.txt  Makefile  main.c
udp/: CMakeLists.txt
udp/client/: main.c
udp/lib/: termproto.c  termproto.h  werror.c  werror.h
udp/logger/: logger.c  logger.h
udp/server/: main.c  server.c  server.h
udp/server/handler/: handler.c  handler.h
udp/server/handler/peer/: peer.c  peer.h
udp/server/service/: service.c  service.h
udp/server/terminal/: terminal.c  terminal.h
